fixed x scrolling on mobile

--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 body{
-    height: 98vh;
+    height: 100vh;
+    width: 100vw;
     background-size: cover;
-    background-image: linear-gradient(to right bottom, #7ed56f, #28b485)
+    background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+
+    overflow-x: hidden;
 }
 
 .container{
